# Cymatix-Context

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  NOTICE  README.md  backend-with-otel.bat  cymatix.toml  helix.toml  launcher-with-otel.bat  overnight_diamond.sh  overnight_diamond_abstain_2026-05-03.sh  overnight_diamond_abstain_control_2026-05-03b.sh  overnight_diamond_e4b_qwen3_2026-05-05.sh  overnight_diamond_native_n20_2026-05-04.sh  overnight_run.sh  pyproject.toml  run-qa-tray.bat  run_full_suite.ps1  run_pr9_sweep.ps1  setup-cymatix.bat  setup-helix.bat  start-cymatix-mcpo.bat  start-cymatix-tray.bat  start-helix-mcpo.bat  start-helix-tray.bat
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: ci.yml  publish.yml
.obsidian/: graph.json  workspace.json
benchmarks/: README.md  _citations.py  _run_n1000_blind.sh  _run_n1000_located.sh  _run_overnight_e4b.sh  _run_slice3_gate.sh  _splade_curve_queries.json  _splade_curve_queries.meta.json  ab_ann_threshold.py  ab_flag_sweep.py  ab_rerank_combinator.py  ab_semantic_probe.py  ab_whitening_dense.py  ablate_dense_prefilter.py  bench_aa_suite.py  bench_babilong.py  bench_budget_zone.py  bench_cache_hitrate.py  bench_chroma_integration.py  bench_claude_matrix.py  bench_context_injected.py  bench_dal_http_s3.py  bench_dimensional_lock.py  bench_enterprise_rag.py  bench_enterprise_rag_recall.py  bench_external_retriever.py  bench_forward_recall.py  bench_gemini.py  bench_groundedness_verifier.py  bench_headroom_latency.py  bench_helix_rag_composition.py  bench_multi_needle.py  bench_multi_needle_50.py  bench_needle.py  bench_needle_1000.py  bench_oauth_provider.py  bench_oauth_scope.py  bench_ollama_inject.py  bench_orchestrator.py  bench_packet.py  (+66 more)
benchmarks/faithfulness/: faithfulness_circuit_tracer.py  needle_faithfulness_experiment.py  needles_239.py  needles_239b.py  real_helix_faithfulness.py
benchmarks/results/: ab_dim_lock_all_on.json  ab_dim_lock_baseline.json  ab_dim_lock_seeded_plus_sr.json  ab_dim_lock_sr.json  ab_dim_lock_w1.json  ab_sweep_all_on.json  ab_sweep_baseline.json  ab_sweep_seeded_plus_sr.json  ab_sweep_sr.json  ab_sweep_summary.json  ab_sweep_w1.json  (+59 more)
cymatix_context/: __init__.py  _asgi.py  agent_prompt.py  aliases.py  api.py  bridge.py  budget_zone.py  codons.py  config.py  context_manager.py  filename_anchor.py  genome.py  hgt.py  knowledge_store.py  mcp_server.py  mem_sync.py  parallel.py  persistence.py  replication.py  ribosome.py  schemas.py  shard_router.py  sharding.py  tagger.py  write_queue.py
deploy/pypi-tombstone/: README.md  pyproject.toml
docs/: DESIGN_TARGET.md  INTEGRATING_WITH_EXISTING_RAG.md  MISSION.md  ROADMAP.md  ROSETTA.md  SETUP.md  TROUBLESHOOTING.md  agent-sdk-fragment.md  config-reference.md  operator-runbooks.md
helix_context/: __init__.py  _asgi.py  accel.py  agent_prompt.py  aliases.py  api.py  bgem3_codec.py  bridge.py  chunk_fetch.py  claims.py  claims_analyze.py  codons.py  compressor.py  config.py  context_manager.py  context_packet.py  cross_store_import.py  cymatics.py  deberta_backend.py  exceptions.py  expand.py  filename_anchor.py  fragments.py  freshness.py  fusion.py  genome.py  hardware.py  headroom_bridge.py  hgt.py  intent_router.py  know_calibration.py  know_decision.py  knowledge_store.py  legibility.py  lexical_rescue.py  mcp_server.py  mem_sync.py  nli_backend.py  parallel.py  persistence.py  (+22 more)
overnight_logs/: BLOCKER_2026-05-12_wall-time.md  _compare_bench.py  _snapshot_sha256.txt  bench_broad_server_baseline.log.err  broad_tighten_2026-05-12_1422_report.md  needle_1000_broad12k_2026-05-12_1422_blind.json  needle_1000_broad12k_2026-05-12_1422_blind.monitor.jsonl  needle_1000_broad7k_2026-05-12_1422_blind.json  needle_1000_broad7k_2026-05-12_1422_blind.monitor.jsonl  plr_gate_2026-05-12_1549_report.md  plr_smoke_off_2026-05-12_1549.json  plr_smoke_on_2026-05-12_1549.json
scripts/: _write_tcm.py  analyze_density_scores.py  audit_erb_github_bucket.py  backfill_bgem3.py  backfill_bgem3_v2.py  backfill_claims.py  backfill_cwola_sema.py  backfill_cwola_sessions.py  backfill_filename_anchor.py  backfill_filename_domains.py  backfill_gene_provenance.py  backfill_kv_tagger_fix.py  backfill_parent_genes.py  backfill_path_key_index.py  backfill_seeded_edges.py  backfill_sema_embeddings.py  bench_claude_matrix.py  bench_dense_recall_latency.py  build_bench_genomes.py  build_fixture_matrix.py  calibrate_know_confidence.py  calibrate_thresholds.py  claude_batch_ingest.py  claude_core_ingest.py  codemod_cymatix_rename.py  compact_genome_sweep.py  crawl_watchdog.py  cross_compare_genomes.py  diagnose_file_grain.py  diagnose_query_extraction.py  freeze_matrix_manifest.py  fresh_genome_build.py  gen_config_reference.py  genome_cleanup.py  ingest_all.py  ingest_models.py  ingest_parallel.py  ingest_steam.py  init_main_db.py  install-native-observability.ps1  (+14 more)
tests/: conftest.py  test_ab_semantic_probe.py  test_abstain_tier.py  test_accel.py  test_additive_weight_plumbing.py  test_admin_refresh.py  test_ann_threshold.py  test_api_walk.py  test_backfill_cuda_empty_cache.py  test_backfill_filename_domains.py  test_bench_citations.py  test_bench_determinism.py  test_bench_enterprise_rag.py  test_bench_help_ascii.py  test_bench_metrics.py  test_bench_needles.py  test_bench_orchestrator.py  test_bench_path_match_prefix_stripped.py  test_bench_profiles.py  test_benchmark_monitor_preflight.py  test_bgem3_codec.py  test_bgem3_singleton.py  test_blend_mode.py  test_bm25_prefilter.py  test_bridge_registry.py  test_bridge_restart.py  test_budget_config_floor.py  test_budget_zone.py  test_bugbash_replication.py  test_bugbash_server.py  test_build_fixture_matrix.py  test_build_fixture_matrix_auto_subshard.py  test_build_fixture_matrix_parallel.py  test_build_fixture_matrix_resume.py  test_build_fixture_matrix_silent_fail.py  test_cache.py  test_calibrate_know_confidence.py  test_calibration.py  test_caller_model_class.py  test_chunk_fetch.py  (+199 more)
(+572 files in other folders)
