[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-context"
version = "0.8.0"
description = "RENAMED: helix-context is now cymatix-context. This package only installs the new one."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Michael Bachaud", email = "swiftwing21@users.noreply.github.com" },
]
# The whole point: pulling this package installs the renamed one, which
# ships the `helix_context` import shim (DeprecationWarning-emitting alias
# of `cymatix_context`) and the deprecated helix* console-script aliases.
dependencies = ["cymatix-context>=0.8.0"]
classifiers = [
    "Development Status :: 7 - Inactive",
]

[project.urls]
Homepage = "https://github.com/mbachaud/Cymatix-Context"

# Metadata-only distribution: deliberately ships NO packages/modules.
# cymatix-context's wheel already provides the `helix_context` package
# (the live alias shim) — shipping one here too would collide on install.
[tool.setuptools]
py-modules = []
packages = []
